--- a/templates/item/item-drug-sheet.hbs
+++ b/templates/item/item-drug-sheet.hbs
@@ -6,10 +6,11 @@
     </div>
   </header>
 <table style="width:200px;">
-<tr><td>Cost</td><td>Load</td></tr>
+<tr><td>Cost</td><td>Load</td><td>Qty</td></tr>
 <tr>
 <td><input type="number" name="system.cost.value" value="{{system.cost.value}}" /></td>
 <td><input type="number" name="system.load.value" value="{{system.load.value}}" /></td>
+<td><input type="number" name="system.itemQty.value" value="{{system.itemQty.value}}" /></td>
 </tr>
 </table>
 
@@ -22,11 +23,11 @@
   {{!-- Sheet Body --}}
   <section class="sheet-body">
 
-    {{!-- Description Tab --}}
+  {{!-- Description Tab --}}
     <div class="tab" data-group="primary" data-tab="description">
       {{editor system.description target="system.description" rollData=rollData button=true owner=owner editable=editable}}
     </div>
- {{!-- Effects Tab --}}
+  {{!-- Effects Tab --}}
     <div class="tab effects" data-group="primary" data-tab="effects">
       {{> "systems/arcane-arcade-fallout/templates/item/parts/item-effects.hbs"}}
     </div>	
