--- a/templates/item/item-drug-sheet.hbs
+++ b/templates/item/item-drug-sheet.hbs
@@ -8,7 +8,7 @@
 <table style="width:200px;">
 <tr><td>Cost</td><td>Load</td><td>Qty</td></tr>
 <tr>
-<td><input type="number" name="system.cost.value" value="{{system.cost.value}}" /></td>
+<td><input type="number" name="system.base-cost.value" value="{{system.base-cost.value}}" /></td>
 <td><input type="number" name="system.load.value" value="{{system.load.value}}" /></td>
 <td><input type="number" name="system.itemQty.value" value="{{system.itemQty.value}}" /></td>
 </tr>
