--- a/templates/actor/heading/bio.hbs
+++ b/templates/actor/heading/bio.hbs
@@ -78,7 +78,7 @@
              style="width: 60px; height: 60px; border: none; margin: 0px; padding: 0px"
              src="/systems/arcane-arcade-fallout/assets/vaultboy/load-icon.png" />
     </td>
-    <td style="vertical-align: middle;text-align:left;" class="statusnum" title="Max = {{carryLoad.max}} Modifiers = {{carryLoad.modifiers}}">
-        {{ carryLoad.value }} / {{#Sum carryLoad.max carryLoad.modifiers}}{{/Sum}}
+    <td style="vertical-align: middle;text-align:left;" class="statusnum" title="Current = {{carryLoad.base}} + {{carryLoad.modifiers}} / Max = {{carryLoad.baseMax}} + {{carryLoad.modifiersMax}}">
+        {{ carryLoad.value }} / {{carryLoad.max}}
     </td>
 </table>
