--- a/templates/actor/heading/bio.hbs
+++ b/templates/actor/heading/bio.hbs
@@ -7,7 +7,7 @@
     <tr>
         <td colspan="999" style="text-align:left;font-size:10pt;">
             <div>
-                <span>Lvl {{system.level}}</span>
+                <span>Lvl {{#GM}}<input style="width:35px;text-align:center" type="number" name="system.level" value="{{/GM}}{{system.level}}{{#GM}}" />{{/GM}}</span>
                 {{#each races as |item id|}}
                 <span class="context-menu"
                       data-item-id="{{ item._id }}"
